--- a/style.css
+++ b/style.css
@@ -75,6 +75,22 @@ header {
   margin-bottom: 1em;
 }
 
+.news-detail h2 {
+  font-size: 1.3em;
+  margin-top: 1.5em;
+  margin-bottom: 0.5em;
+}
+
+.news-detail h3 {
+  font-size: 1.1em;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+}
+
+.news-detail ul {
+  padding-left: 1.5em;
+}
+
 footer {
   text-align: center;
   padding: 1em;
