--- a/style.css
+++ b/style.css
@@ -1,101 +1,51 @@
 body {
-  font-family: Arial, sans-serif;
+  font-family: sans-serif;
   color: black;
   margin: 0;
   padding: 0;
-  background-color: white;
 }
 
 header {
-  text-align: center;
-  padding: 1em;
-  font-size: 1.8em;
-  background-color: #e0f7ff;
-  border-bottom: 1px solid #ccc;
+  background: #ccc;
+  padding: 10px;
+  font-size: 24px;
 }
 
 .menu-bar {
+  background: #eee;
   display: flex;
-  justify-content: center;
-  gap: 2em;
-  background-color: #dddddd;
-  padding: 0.8em 0;
+  padding: 10px;
 }
 
 .menu-bar a {
+  margin-right: 20px;
   text-decoration: none;
   color: black;
-  font-weight: bold;
-  font-size: 1em;
-  padding: 0.3em 0.6em;
-  border-radius: 5px;
-  position: relative;
+  padding: 5px 10px;
 }
 
 .menu-bar a.current {
-  border: 2px solid white;
-  padding: 0.3em 0.6em;
-  border-radius: 5px;
+  background: #fff;
+  border-radius: 8px;
 }
 
 .content-area {
-  background-color: #f0f0f0;
-  padding: 2em;
+  padding: 20px;
 }
 
 .info-box, .notice-box {
-  background-color: #e0f7ff;
-  border-radius: 12px;
-  padding: 1.2em;
-  margin-bottom: 2em;
-}
-
-.info-box p, .notice-box p {
-  margin: 0.5em 0;
-  font-size: 1.2em;
+  background: #ccf;
+  border-radius: 10px;
+  padding: 15px;
+  margin-bottom: 20px;
 }
 
 .notice-item {
-  margin: 0.5em 0;
-}
-
-.notice-item a {
-  text-decoration: none;
-  color: black;
-}
-
-.news-detail {
-  background-color: #e0f7ff;
-  border-radius: 12px;
-  padding: 2em;
-}
-
-.news-detail h1 {
-  font-size: 1.5em;
-  margin-bottom: 1em;
-}
-
-.news-detail h2 {
-  font-size: 1.3em;
-  margin-top: 1.5em;
-  margin-bottom: 0.5em;
-}
-
-.news-detail h3 {
-  font-size: 1.1em;
-  margin-top: 1em;
-  margin-bottom: 0.5em;
-}
-
-.news-detail ul {
-  padding-left: 1.5em;
+  margin-top: 10px;
 }
 
 footer {
+  background: #ccc;
   text-align: center;
-  padding: 1em;
-  font-size: 0.9em;
-  background-color: #dddddd;
-  border-top: 1px solid #ccc;
-  margin-top: 1em;
+  padding: 10px;
 }
