--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* 共通スタイル */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -18,7 +17,7 @@ header {
 /* ナビゲーションバー */
 .menu-bar {
   display: flex;
-  justify-content: center;
+  justify-content: center; /* 中央寄せ */
   background-color: #808080; /* 背景灰色 */
   padding: 10px 0;
 }
